fix: Make loader more visible on the light theme

--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -12,7 +12,7 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 3px dotted #fff;
+  border: 3px dotted var(--on-surface);
   border-style: solid solid dotted dotted;
   border-radius: 50%;
   display: inline-block;
